Make sure content isn't covered on bottom

--- a/friendscleveland/memorial.css
+++ b/friendscleveland/memorial.css
@@ -13,6 +13,7 @@
     gap: 30px;
     padding: 0 15px;
     min-height: 100vh;
+    margin-bottom: 85px;
 }
 
 .main-content {
